Fix for profile page image appearance/alignment

--- a/ArmedCards/ArmedCards.Web/Content/Home.css
+++ b/ArmedCards/ArmedCards.Web/Content/Home.css
@@ -767,6 +767,12 @@ fieldset > .button.active
 	margin-right: 0;
 }
 
+.user .username.loggedIn > img:first-child
+{
+	margin-right: .4em;
+	vertical-align: top;
+}
+
 .user .username.loggedIn div
 {
 	display: inline-block;
